force-app/main/default/objects/Phone_Validation_Result__c/fields/Country_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Country_Prefix__c</fullName>
    <description>The country prefix that must be prepended to the number when dialling internationally.</description>
    <label>Country Prefix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>