force-app/main/default/objects/Phone_Validation_Result__c/fields/Error_Cause__c.field-meta.xml
<CustomField>
    <fullName>Error_Cause__c</fullName>
    <label>Error Cause</label>
    <type>TextArea</type>
</CustomField>