force-app/main/default/objects/Phone_Validation_Result__c/fields/Error_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Error_Resolution__c</fullName>
    <label>Error Resolution</label>
    <type>TextArea</type>
</CustomField>