force-app/main/default/objects/Phone_Validation_Result__c/fields/ErrorId__c.field-meta.xml
<CustomField>
    <fullName>ErrorId__c</fullName>
    <label>ErrorId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>