force-app/main/default/objects/Phone_Validation_Result__c/fields/Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid__c</fullName>
    <description>Whether the number is valid or not (Maybe is returned if full validation couldn&apos;t be performed. Cellular network issues can cause temporary failures in the validation procedure). ([Yes|No|Maybe])</description>
    <label>Is Valid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>