force-app/main/default/objects/Phone_Validation_Result__c/fields/National_Format__c.field-meta.xml
<CustomField>
    <fullName>National_Format__c</fullName>
    <description>The domestic network format (useful for dialling from within the same country).</description>
    <label>National Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>