force-app/main/default/objects/Phone_Validation_Result__c/fields/Network_Code__c.field-meta.xml
<CustomField>
    <fullName>Network_Code__c</fullName>
    <description>The current operator serving the supplied number.</description>
    <label>Network Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>