force-app/main/default/objects/Phone_Validation_Result__c/fields/Network_Country__c.field-meta.xml
<CustomField>
    <fullName>Network_Country__c</fullName>
    <description>The country code of the operator.</description>
    <label>Network Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>