force-app/main/default/objects/Phone_Validation_Result__c/fields/Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Network_Name__c</fullName>
    <description>The name of the current operator serving the supplied number.</description>
    <label>Network Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>