force-app/main/default/objects/Phone_Validation_Result__c/fields/Number_Type__c.field-meta.xml
<CustomField>
    <fullName>Number_Type__c</fullName>
    <description>The type of number that was detected in the request (MOBILE, LANDLINE OR VOIP).</description>
    <label>Number Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>