force-app/main/default/objects/Phone_Validation_Result__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>The recipient phone number in international format.</description>
    <label>Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>