force-app/main/default/objects/Phone_Validation_Result__c/fields/Phone_Value__c.field-meta.xml
<CustomField>
    <fullName>Phone_Value__c</fullName>
    <label>Phone Value</label>
    <type>Phone</type>
</CustomField>