force-app/main/default/objects/Phone_Validation_Result__c/fields/Request_Processed__c.field-meta.xml
<CustomField>
    <fullName>Request_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Returns true if we managed to process the request on the network or false if the validation attempt was unsuccessful.</description>
    <label>Request Processed</label>
    <type>Checkbox</type>
</CustomField>