force-app/main/default/objects/Phone_Validation_Result__c/fields/Validated_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Validated_Field_Name__c</fullName>
    <label>Validated Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>