force-app/main/default/objects/Phone_Validation_Result__c/fields/Wrong_Response_Code_Body__c.field-meta.xml
<CustomField>
    <fullName>Wrong_Response_Code_Body__c</fullName>
    <label>Wrong Response Code Body</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>